# Hackathon2_Phase3

./: PHASE3.md  README.md  package-lock.json  pyproject.toml  run_tests.sh
app/: layout.tsx
app/(auth)/signin/: page.tsx
app/(auth)/signup/: page.tsx
backend/: pyproject.toml  run_tests.sh
backend/alembic/versions/: 8022f7d35989_initial_schema_users_and_tasks_tables.py
backend/src/: main.py
backend/src/api/: __init__.py  auth.py  chat.py  deps.py  tasks.py
backend/src/core/: config.py  database.py  rate_limit.py  security.py
backend/src/mcp/: handlers.py  tools.py
backend/src/models/: __init__.py  chat.py  task.py  user.py
backend/src/services/: auth_service.py  chat_service.py  task_service.py
backend/tests/integration/: test_auth_api.py  test_tasks_api.py
backend/tests/unit/: test_security.py  test_task_model.py  test_task_service.py  test_user_model.py
history/prompts/001-todo-console-app/: 002-phase-i-specification-creation.spec.prompt.md  003-phase-i-implementation-planning.plan.prompt.md  004-phase-i-task-breakdown-generation.tasks.prompt.md
history/prompts/002-fullstack-web-app/: 001-phase-ii-specification.spec.prompt.md  002-phase-ii-implementation-planning.plan.prompt.md  003-phase-ii-task-breakdown.tasks.prompt.md
history/prompts/003-ai-chatbot/: 001-generate-task-breakdown.tasks.prompt.md  002-implement-phase-iii-ai-chatbot.green.prompt.md
history/prompts/constitution/: 001-initial-constitution-phase-i.constitution.prompt.md
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-console-app/checklists/: requirements.md
specs/001-todo-console-app/contracts/: cli-commands.md
specs/002-fullstack-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fullstack-web-app/checklists/: requirements.md
specs/002-fullstack-web-app/contracts/: auth-api.md  tasks-api.md
specs/003-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-chatbot/checklists/: requirements.md
specs/003-ai-chatbot/contracts/: chat-api.yaml  mcp-tools.md
src/: main.py  middleware.ts
src/cli/: commands.py  formatter.py
src/lib/: api.ts  auth.ts  chat.ts
src/models/: exceptions.py  task.py
src/services/: task_repository.py  task_service.py
tests/: conftest.py
tests/components/: SignInForm.test.tsx  SignUpForm.test.tsx  TaskEditForm.test.tsx  TaskForm.test.tsx  TaskList.test.tsx
tests/integration/: test_cli_commands.py
tests/unit/: test_task_model.py  test_task_repository.py  test_task_service.py
(+14 files in other folders)
